--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,2 @@
-name: London Squared
-description: A visualization layout for London borough data
+name: Tulsa Squared
+description: A visualization layout for Tulsa borough data
