--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@thompcd/londonsquared",
-  "version": "2.0.0",
+  "version": "0.1.0",
   "description": "Visualise Tulsa neighborhood data in the style of After the Floods London Squared cartograms",
   "keywords": [
     "d3-module",
@@ -26,7 +26,8 @@
     "browser-sync": "^2.26.10",
     "cheerio": "^1.0.0-rc.2",
     "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.12"
+    "webpack-cli": "^3.3.12",
+    "http-server": "^14.1.1"
   },
   "engines": {
     "node": ">=16.0.0"
