--- a/package.json
+++ b/package.json
@@ -1,30 +1,40 @@
 {
-  "name": "@aftertheflood/londonsquared",
-  "version": "0.3.2",
-  "description": "Visualise london borough data in the style of After the Floods London Squared cartograms",
+  "name": "tulsasquared",
+  "version": "0.2.0",
+  "description": "Visualize Tulsa neighborhood data in the style of After the Floods London Squared cartograms",
   "keywords": [
     "d3-module",
     "cartogram",
     "london",
-    "visualization"
+    "visualization",
+    "Tulsa"
   ],
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "serve": "npx browser-sync start --server './'",
-    "build": "npx webpack --watch",
+    "serve": "http-server",
+    "build": "npx webpack",
     "prepublish": "npx webpack"
   },
-  "author": "tom.g.pearson@gmail.com",
+  "author": "corey.dwayne.thompson@gmail.com",
   "license": "ISC",
   "dependencies": {
-    "d3": "^5.7.0"
+    "d3": "^5.7.0",
+    "tulsasquared": "^0.2.0"
   },
-  "repository": "https://github.com/aftertheflood/londonsquared",
+  "repository": "https://github.com/thompcd/londonsquared",
   "devDependencies": {
     "browser-sync": "^2.26.10",
     "cheerio": "^1.0.0-rc.2",
+    "http-server": "^14.1.1",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12"
+  },
+  "engines": {
+    "node": ">=16.0.0"
+  },
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
   }
 }
